--- a/css/AddressBookStylesheet.css
+++ b/css/AddressBookStylesheet.css
@@ -178,8 +178,58 @@ select{
     color: #42515f;
     background-color: transparent ;
 }
+
+/*For error*/
 error-output{
     font-size: 15px;
     font-style: italic;
     color: red;
+}
+
+/* UC5 */
+.button{
+    cursor: pointer;
+}
+
+.submit-reset-button{
+    width: 100%;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding-top: 20px;
+}
+
+.submitButton{
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    font: normal normal normal 17px/23px Roboto;
+    color: #42515f;
+    background: rgb(218, 218, 218) 0% 0% no-repeat padding-box;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    opacity: 1;
+    margin-left: 290px;
+}
+
+.resetButton{
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    font: normal normal normal 17px/23px Roboto;
+    letter-spacing: 0px;
+    text-align: center;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    color: #42515F;
+    opacity: 1;
+}
+
+.buttonParent{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 10px;
 }
