--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -97,3 +97,60 @@ body{
     text-align: center;
     display: inline-block;
 }
+
+/* UC-12 */
+.table-main{
+    width: 80%;
+    margin: 0 auto;
+    overflow: auto;
+}
+
+.table{
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+    min-width: 800px;
+}
+
+td, th{
+    text-align: left;
+    padding: 5px 8px;
+}
+
+th{
+    background: 0% 0% no-repeat padding-box;
+    /* border-radius: 3px 3px 0px 8px; */
+    text-align: left;
+    font: normal normal bold 15px/20px Lato;
+    letter-spacing: 0px;
+    color: #658292;
+    text-transform: capitalize;
+    opacity: 1;
+    border: 0px solid #dddddd;
+}
+
+tr:not(:first-child){
+    background: #ffffff 0% 0% no-repeat padding-box;
+    border: 1px solid #e3e3e3;
+    border-radius: 3px;
+}
+
+td{
+    font: normal normal normal 14px/21px Lato;
+    letter-spacing: 0px;
+    color: #3d3d3d;
+    opacity: 1;
+}
+
+td:first-child{
+    display: flex;
+    align-items: center;
+}
+
+td:img:first-child{
+    margin-right: 10px;
+}
+
+td img{
+    cursor: pointer;
+}
